Fixed web apps and corner clipping

--- a/de/styles/window.css
+++ b/de/styles/window.css
@@ -76,11 +76,13 @@
     background-color: rgba(255, 255, 255, 0.7);
 
     font-size: 15px;
+
+    position: absolute;
     
     padding: 20px;
-    overflow: hidden;
 
     border-radius: 0 0 9px 9px;
+    overflow: hidden;
 
     width: calc(100% - 40px);
     height: calc(100% - 90px);
